--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,8 @@ jobs:
       - name: Install Surge
         run: npm install -g surge
 
+      - name: Debug
+        run: echo "Domain is ${{ secrets.SURGE_DOMAIN }}"
+
       - name: Deploy
         run: surge ./ ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
